// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Credential Context creates Credentail 1`] = `
Object {
  "@context": Array [
    "https://www.w3.org/2018/credentials/v1",
    Object {
      "@version": 1.1,
      "data": Object {
        "@context": Object {
          "worker": Object {
            "@id": "meta:worker",
            "@type": "xsd:string",
          },
        },
        "@id": "meta:data",
        "@type": "@id",
      },
      "meta": "https://meta-id.meta-belarus.org/vc-schema#",
    },
  ],
  "credentialSubject": Object {
    "data": Object {
      "@type": "TestCredentialSubjectDataType",
      "worker": "Valentin Michalych",
    },
  },
  "holder": Object {
    "id": Any<String>,
  },
  "id": Any<String>,
  "issuanceDate": Any<String>,
  "type": Array [
    "VerifiableCredential",
    "TestCredential",
  ],
}
`;

exports[`Credential Context creates unsigned verifiable presentation 1`] = `
Object {
  "@context": Array [
    "https://www.w3.org/2018/credentials/v1",
  ],
  "holder": Object {
    "id": Any<String>,
  },
  "id": Any<String>,
  "type": Array [
    "VerifiablePresentation",
    "TestPresentation",
  ],
  "verifiableCredential": Array [
    Object {
      "@context": Array [
        "https://www.w3.org/2018/credentials/v1",
        Object {
          "@version": 1.1,
          "data": Object {
            "@context": Object {
              "worker": Object {
                "@id": "meta:worker",
                "@type": "xsd:string",
              },
            },
            "@id": "meta:data",
            "@type": "@id",
          },
          "meta": "https://meta-id.meta-belarus.org/vc-schema#",
        },
      ],
      "credentialSubject": Object {
        "data": Object {
          "@type": "TestCredentialSubjectDataType",
          "worker": "Valentin Michalych",
        },
      },
      "holder": Object {
        "id": Any<String>,
      },
      "id": Any<String>,
      "issuanceDate": Any<String>,
      "issuer": Any<String>,
      "proof": Object {
        "created": Any<String>,
        "jws": Any<String>,
        "proofPurpose": "assertionMethod",
        "type": "EcdsaSecp256k1Signature2019",
        "verificationMethod": Any<String>,
      },
      "type": Array [
        "VerifiableCredential",
        "TestCredential",
      ],
    },
  ],
}
`;

exports[`Credential Context signs Credential 1`] = `
Object {
  "@context": Array [
    "https://www.w3.org/2018/credentials/v1",
    Object {
      "@version": 1.1,
      "data": Object {
        "@context": Object {
          "worker": Object {
            "@id": "meta:worker",
            "@type": "xsd:string",
          },
        },
        "@id": "meta:data",
        "@type": "@id",
      },
      "meta": "https://meta-id.meta-belarus.org/vc-schema#",
    },
  ],
  "credentialSubject": Object {
    "data": Object {
      "@type": "TestCredentialSubjectDataType",
      "worker": "Valentin Michalych",
    },
  },
  "holder": Object {
    "id": Any<String>,
  },
  "id": Any<String>,
  "issuanceDate": Any<String>,
  "issuer": Any<String>,
  "proof": Object {
    "created": Any<String>,
    "jws": Any<String>,
    "proofPurpose": "assertionMethod",
    "type": "EcdsaSecp256k1Signature2019",
    "verificationMethod": Any<String>,
  },
  "type": Array [
    "VerifiableCredential",
    "TestCredential",
  ],
}
`;
